--- a/vulcanus-lab/locale/en/english.cfg
+++ b/vulcanus-lab/locale/en/english.cfg
@@ -17,7 +17,9 @@ inspirational-fuel-cell=Inspirational fuel cell
 
 [mod-setting-name]
 no-space-age-compatibility=No Space Age version
+metallurgic_lab_science_pack_drain_rate_percent=Metallurgic lab science pack drain rate percent
 
 [mod-setting-description]
 no-space-age-compatibility=If true, recipes and categories will be modified such that this mod can be used without Space-Age
+metallurgic_lab_science_pack_drain_rate_percent=How fast science packs will drain. 100% is full drain rate.
 
