Update ru locale

--- a/vulcanus-lab/locale/ru/russian.cfg
+++ b/vulcanus-lab/locale/ru/russian.cfg
@@ -17,7 +17,8 @@ inspirational-fuel-cell=Вдохновляющий топливный элеме
 
 [mod-setting-name]
 no-space-age-compatibility=Версия без Space Age
+metallurgic_lab_science_pack_drain_rate_percent=Процент потребления исследовательских пакетов металлургической лабораторией
 
 [mod-setting-description]
 no-space-age-compatibility=Если включено, рецепты и категории будут изменены так, что мод можно использовать без Space Age.
-
+metallurgic_lab_science_pack_drain_rate_percent=Как быстро будут потребляться исследовательские пакеты. 100% - обычное потребление.
